--- a/api/qsharp/microsoft.quantum.math.ceiling.yml
+++ b/api/qsharp/microsoft.quantum.math.ceiling.yml
@@ -2,9 +2,9 @@
 uid: microsoft.quantum.math.ceiling
 name: Ceiling
 type: function
-namespace: Microsoft.Quantum.Math
+namespace: microsoft.quantum.math
 summary: 返回大于或等于指定数字的最小整数。
-remarks: 有关更多详细信息，请参阅[system.object](https://docs.microsoft.com/dotnet/api/system.math.ceiling) 。
+remarks: 有关更多详细信息，请参阅 [system.object](https://docs.microsoft.com/dotnet/api/system.math.ceiling) 。
 syntax: 'function Ceiling (value : Double) : Int'
 input:
   content: '(value : Double)'
@@ -18,9 +18,9 @@ output:
   - isPrimitive: true
     uid: Int
 metadata:
-  ms.openlocfilehash: 97ba849c2216c116c0151fd2605646f674860227
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 5b8aae1805360a21e936ec0b5d10eef6daaf5d98
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82683376"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89335064"
