--- a/api/qsharp/microsoft.quantum.simulation.identitygeneratorindex.yml
+++ b/api/qsharp/microsoft.quantum.simulation.identitygeneratorindex.yml
@@ -2,14 +2,14 @@
 uid: microsoft.quantum.simulation.identitygeneratorindex
 name: IdentityGeneratorIndex
 type: function
-namespace: Microsoft.Quantum.Simulation
-summary: 返回与零 Hamiltonian （ `H = 0`与标识演化操作相对应）一致的生成器索引。
+namespace: microsoft.quantum.simulation
+summary: 返回与零 Hamiltonian （与 `H = 0` 标识演化操作相对应）一致的生成器索引。
 syntax: 'function IdentityGeneratorIndex (idxTerm : Int) : Microsoft.Quantum.Simulation.GeneratorIndex'
 input:
   content: '(idxTerm : Int)'
   types:
   - name: idxTerm
-    summary: 此输入将被忽略，并定义为与<xref:microsoft.quantum.simulation.generatorsystem>用户定义的类型保持一致。
+    summary: 此输入将被忽略，并定义为与 <xref:microsoft.quantum.simulation.generatorsystem> 用户定义的类型保持一致。
     isPrimitive: true
     uid: Int
 output:
@@ -18,9 +18,9 @@ output:
   - summary: 表示 Hamiltonian $H = $0 下的演变的生成器索引。
     uid: microsoft.quantum.simulation.generatorindex
 metadata:
-  ms.openlocfilehash: b498cc055bed2fcc69ac28548fc08b2bbaa74430
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 680788feec5703ff6a9f23c5367070e7694f524a
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82683056"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89330032"
