--- a/api/qsharp/microsoft.quantum.simulation.intstopaulis.yml
+++ b/api/qsharp/microsoft.quantum.simulation.intstopaulis.yml
@@ -2,28 +2,28 @@
 uid: microsoft.quantum.simulation.intstopaulis
 name: IntsToPaulis
 type: function
-namespace: Microsoft.Quantum.Simulation
+namespace: microsoft.quantum.simulation
 summary: 将整数数组转换为 qubit Pauli 运算符的数组。
 syntax: 'function IntsToPaulis (ints : Int[]) : Pauli[]'
 input:
   content: '(ints : Int[])'
   types:
   - name: ints
-    summary: 要转换为 Pauli 运算符的`0..3`范围内的整数数组。
+    summary: 要转换为 Pauli 运算符的范围内的整数数组 `0..3`  。
     isArray: true
     isPrimitive: true
     uid: Int
 output:
   content: Pauli[]
   types:
-  - summary: Pauli 运算符`paulis` `Pauli[]` `ints`的数组，其长度`paulis[idxPauli]`与`[PauliI, PauliX, PauliY, PauliZ]`给定的的元素相等。 `ints[idxPauli]`
+  - summary: '`paulis`Pauli 运算符的数组 `Pauli[]` ，其长度与给定的的 `ints` `paulis[idxPauli]` 元素相等 `[PauliI, PauliX, PauliY, PauliZ]` `ints[idxPauli]` 。'
     isArray: true
     isPrimitive: true
     uid: Pauli
 metadata:
-  ms.openlocfilehash: 1159e3db02663b0588d12ea9d297e055be84ac4a
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: f4d7e34cc7555fab89c6fd4d8371837da2296015
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82682615"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89329809"
