--- a/api/qsharp/microsoft.quantum.simulation.pauliblockencoding.yml
+++ b/api/qsharp/microsoft.quantum.simulation.pauliblockencoding.yml
@@ -2,19 +2,19 @@
 uid: microsoft.quantum.simulation.pauliblockencoding
 name: PauliBlockEncoding
 type: function
-namespace: Microsoft.Quantum.Simulation
+namespace: microsoft.quantum.simulation
 summary: >-
   为 Hamiltonian 创建块编码单一编码。
 
 
   Hamiltonian $H = \ sum_ {j} \ alpha_j P_j $ 由 $P $ _j $ 的 Pauli 术语的总和进行描述，每个术语都包含实系数 $ \ alpha_j $。
-remarks: 这是通过以下方法获取的：准备并 unpreparing 状态 $ \ sum_ {j} \sqrt{\ alpha_j/\alpha}\ket{j} $，并构造一个按<xref:microsoft.quantum.preparation.statepreparationpositivecoefficients>乘法<xref:microsoft.quantum.canon.multiplexoperationsfromgenerator>控制的单一和。
+remarks: 这是通过以下方法获取的：准备并 unpreparing 状态 $ \ sum_ {j} \sqrt{\ alpha_j/\alpha}\ket{j} $，并构造一个按乘法控制的单一 <xref:microsoft.quantum.preparation.statepreparationpositivecoefficients> 和 <xref:microsoft.quantum.canon.multiplexoperationsfromgenerator> 。
 syntax: 'function PauliBlockEncoding (generatorSystem : Microsoft.Quantum.Simulation.GeneratorSystem) : (Double, Microsoft.Quantum.Simulation.BlockEncodingReflection)'
 input:
   content: '(generatorSystem : Microsoft.Quantum.Simulation.GeneratorSystem)'
   types:
   - name: generatorSystem
-    summary: 一个`GeneratorSystem` ，它描述 $H $ 作为 Pauli 条款的总和
+    summary: 一个 `GeneratorSystem` ，它描述 $H $ 作为 Pauli 条款的总和
     uid: microsoft.quantum.simulation.generatorsystem
 output:
   content: (Double, Microsoft.Quantum.Simulation.BlockEncodingReflection)
@@ -29,15 +29,15 @@ output:
       ## <a name="second-parameter"></a>第二个参数
 
 
-      Hamiltonian `BlockEncodingReflection`的单一 $U $ $H $。 由于这个单一的 $U ^ 2 = I $，它也是一个反射。
+      `BlockEncodingReflection`Hamiltonian 的单一 $U $ $H $。 由于这个单一的 $U ^ 2 = I $，它也是一个反射。
     types:
     - isPrimitive: true
       uid: Double
     - uid: microsoft.quantum.simulation.blockencodingreflection
 metadata:
-  ms.openlocfilehash: 75b614fa23f2e00a3a960224d79905106fb06070
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: a7d259a2d09cb26d46976132589ab6693530cb63
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82682547"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89329709"
