--- a/api/qsharp/microsoft.quantum.arithmetic.assertprobint.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.assertprobint.yml
@@ -2,16 +2,16 @@
 uid: microsoft.quantum.arithmetic.assertprobint
 name: AssertProbInt
 type: operation
-namespace: Microsoft.Quantum.Arithmetic
+namespace: microsoft.quantum.arithmetic
 summary: >-
   断言量程寄存器的特定状态的概率具有预期值。
 
 
   如果给定 $n $-qubit 量程状态 $ \ket{\psi} = \sum ^ {2 ^ n-1} _ {j = 0} \ alpha_j \ket{j} $，则断言 $ $j 索引的状态 $ \ket{j} $ 的概率 $ | \ alpha_j | ^ 2 $ 具有预期值。
 examples: >-
-  假设`qubits`注册将 qubit 的量程状态 $ \ket{\psi} = \ sqrt {1/8} \ 票证{0}+ \ sqrt {7/8} \ 票证{6}$ 编码为小 endian 格式。
+  假设注册将 `qubits` qubit 的量程状态 $ \ket{\psi} = \ sqrt {1/8} \ 票证 {0} + \ sqrt {7/8} \ 票证 $ 编码为 {6} 小 endian 格式。
 
-  这意味着数字{0}状态 $ \ket \equiv\ket{0}\ket{0}\ket{0}$ 和 $ \ket{6}\equiv\ket{0}\ket{1}\ket{1}$。 以下断言成功：
+  这意味着数字状态 $ \ket {0} \equiv\ket {0} \ket {0} \ket {0} $ 和 $ \ket \equiv\ket \ket {6} {0} {1} \ket {1} $。 以下断言成功：
 
 
   - `AssertProbInt(0,0.125,qubits,10e-10);`
@@ -22,7 +22,7 @@ input:
   content: '(stateIndex : Int, expected : Double, qubits : Microsoft.Quantum.Arithmetic.LittleEndian, tolerance : Double)'
   types:
   - name: stateIndex
-    summary: 由`LittleEndian`寄存器表示的状态 $ \ket{j} $ 的索引 $j $。
+    summary: 由寄存器表示的状态 $ \ket{j} $ 的索引 $j $ `LittleEndian` 。
     isPrimitive: true
     uid: Int
   - name: expected
@@ -42,9 +42,9 @@ output:
   - isPrimitive: true
     uid: Unit
 metadata:
-  ms.openlocfilehash: 247dcb78921bfe5df96c56b74e251d0413cfab3d
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: e5269b46849da17602447491e77e756e999cb3d9
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82675257"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89342323"
