--- a/api/qsharp/microsoft.quantum.arithmetic.bigendianaslittleendian.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.bigendianaslittleendian.yml
@@ -2,24 +2,24 @@
 uid: microsoft.quantum.arithmetic.bigendianaslittleendian
 name: BigEndianAsLittleEndian
 type: function
-namespace: Microsoft.Quantum.Arithmetic
-summary: 通过反转`BigEndian` qubit 排序将 qubit `LittleEndian`寄存器转换为 qubit 寄存器。
+namespace: microsoft.quantum.arithmetic
+summary: '`BigEndian`通过反转 qubit 排序将 qubit 寄存器转换为 `LittleEndian` qubit 寄存器。'
 syntax: 'function BigEndianAsLittleEndian (input : Microsoft.Quantum.Arithmetic.BigEndian) : Microsoft.Quantum.Arithmetic.LittleEndian'
 input:
   content: '(input : Microsoft.Quantum.Arithmetic.BigEndian)'
   types:
   - name: input
-    summary: Qubit 寄存器`BigEndian` 。
+    summary: Qubit 寄存器 `BigEndian` 。
     uid: microsoft.quantum.arithmetic.bigendian
 output:
   content: Microsoft.Quantum.Arithmetic.LittleEndian
   types:
-  - summary: Qubit 寄存器`LittleEndian` 。
+  - summary: Qubit 寄存器 `LittleEndian` 。
     uid: microsoft.quantum.arithmetic.littleendian
 metadata:
-  ms.openlocfilehash: 477ddb647a3525a72c98c7c286976ef9efa6ce6f
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 98cbd5e48327c4e8c8a7064e32cf6db8835c93dd
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82675244"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89342340"
