--- a/api/qsharp/microsoft.quantum.arithmetic.computereciprocali.yml
+++ b/api/qsharp/microsoft.quantum.arithmetic.computereciprocali.yml
@@ -2,8 +2,8 @@
 uid: microsoft.quantum.arithmetic.computereciprocali
 name: ComputeReciprocalI
 type: operation
-namespace: Microsoft.Quantum.Arithmetic
-summary: 使用整除计算无符号整数 x 的倒数 1/x。 解释为整数的结果将为`floor(2^(2*n-1) / x)`。
+namespace: microsoft.quantum.arithmetic
+summary: 使用整除计算无符号整数 x 的倒数 1/x。 解释为整数的结果将为 `floor(2^(2*n-1) / x)` 。
 remarks: 对于输入 x = 0，输出将为全部输出。
 syntax: 'operation ComputeReciprocalI (xs : Microsoft.Quantum.Arithmetic.LittleEndian, result : Microsoft.Quantum.Arithmetic.LittleEndian) : Unit'
 input:
@@ -13,7 +13,7 @@ input:
     summary: n 位无符号整数
     uid: microsoft.quantum.arithmetic.littleendian
   - name: result
-    summary: 2n 位输出，最初必须为 $ \ket{0}$。
+    summary: 2n 位输出，最初必须为 $ \ket {0} $。
     uid: microsoft.quantum.arithmetic.littleendian
 output:
   content: Unit
@@ -24,9 +24,9 @@ functors:
 - Adjoint
 - Controlled
 metadata:
-  ms.openlocfilehash: b371c7c1e7442e49aab01793fdaa9c99bcafa35d
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 824bc89e8d6290c98d505b0b17d4521edaa36384
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82679726"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89342289"
