--- a/api/qsharp/microsoft.quantum.canon.transformedoperationa.yml
+++ b/api/qsharp/microsoft.quantum.canon.transformedoperationa.yml
@@ -2,10 +2,10 @@
 uid: microsoft.quantum.canon.transformedoperationa
 name: TransformedOperationA
 type: function
-namespace: Microsoft.Quantum.Canon
+namespace: microsoft.quantum.canon
 summary: 给定一个函数和一个操作，返回一个新的操作，其输入由给定函数转换。
 examples: >-
-  以下调用使用@"Microsoft.Quantum.Arithmetic.LittleEndianAsBigEndian"将为输入设计的@"Microsoft.Quantum.Arithmetic.BigEndian"操作转换为接受类型@"Microsoft.Quantum.Arithmetic.LittleEndian"为的输入的操作：
+  以下调用使用 @"Microsoft.Quantum.Arithmetic.LittleEndianAsBigEndian" 将为输入设计的操作转换 @"Microsoft.Quantum.Arithmetic.BigEndian" 为接受类型为的输入的操作 @"Microsoft.Quantum.Arithmetic.LittleEndian" ：
 
 
   ```qsharp
@@ -44,7 +44,7 @@ input:
 output:
   content: ('U => Unit is Adj)
   types:
-  - summary: 新操作 tbat 的输入`fn`调用，然后将结果输出传递给`op`。
+  - summary: 新操作 tbat 的 `fn` 输入调用，然后将结果输出传递给 `op` 。
     isOperation: true
     input:
       types:
@@ -63,9 +63,9 @@ seeAlso:
 - applywithinputtransformation
 - compose
 metadata:
-  ms.openlocfilehash: f4cb96f3dac9c540131f04cd1b24449f78a26ef2
-  ms.sourcegitcommit: db23885adb7ff76cbf8bd1160d401a4f0471e549
+  ms.openlocfilehash: 4d31ea10e94294f7016619c546de76040b7ecadc
+  ms.sourcegitcommit: d6ac6f4345be0dd68f1bcd944f44b08e7a3cf346
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/01/2020
-  ms.locfileid: "82678063"
+  ms.lasthandoff: 09/02/2020
+  ms.locfileid: "89354937"
